Make categories and items interactive

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -1,4 +1,4 @@
-<template name="main-page">
+<template name="mainPage">
     <div id="banners">
         <div class="item"></div><div class="item"></div>
     </div>
