--- a/tunisiansun.html
+++ b/tunisiansun.html
@@ -37,14 +37,7 @@
 
         {{renderPage}}
     
-        <div id="popular_products" class="product_items">
-            <h2>Лидеры продаж <a href="#">Смотреть все продукты</a></h2>
-            
-            {{> item}}
-            {{> item}}
-            {{> item}}
-            {{> item}}
-        </div>
+        {{> popularProducts}}
 
         <div id="footer">
             <ul>
