--- a/blocks/item/item.html
+++ b/blocks/item/item.html
@@ -1,7 +1,7 @@
 <template name="item">
     <div class="item">
-        <a href="/item"><img src="http://cs316527.userapi.com/v316527119/446e/lw9UnOLBB8U.jpg" alt=""></a>
-        <a href="/item" class="item_desc">Water Canvas Blush</a>
-        <span class="price">456 Руб</span>
+        <a href="/items/{{slug}}"><img src="{{image}}" alt="{{name}}"></a>
+        <a href="/items/{{slug}}" class="item_desc">{{name}}</a>
+        <span class="price">{{price}} руб.</span>
     </div>
 </template>
