--- a/tunisiansun.html
+++ b/tunisiansun.html
@@ -12,9 +12,7 @@
                 <a href="#">Вход</a>
             </div>
             
-            <div id="cart">
-                <a href="#">Корзина <span>5 наименований</span></a>
-            </div>
+            {{> cart}}
             
             <div class="clear"></div>
         </div>
